--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/fullscreen_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
+
+
+    <ImageView
         android:id="@+id/world_cup_trophy"
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="112dp"
         android:contentDescription="@string/contest_description"
         android:src="@drawable/img_world_cup_trophy_2018" />
 
@@ -20,7 +27,8 @@
         android:layout_below="@id/world_cup_trophy"
         android:layout_centerHorizontal="true"
         android:text="@string/world_cup_date"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textColor="@android:color/background_dark"/>
 
     <Button
         android:layout_width="200dp"
