--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,6 +31,7 @@
         android:textColor="@android:color/background_dark"/>
 
     <Button
+        android:id="@+id/btn_play"
         android:layout_width="200dp"
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
