--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,7 +8,7 @@
         android:id="@+id/fullscreen_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
 
     <ImageView
@@ -27,8 +26,8 @@
         android:layout_below="@id/world_cup_trophy"
         android:layout_centerHorizontal="true"
         android:text="@string/world_cup_date"
-        android:textSize="16sp"
-        android:textColor="@android:color/background_dark"/>
+        android:textColor="@android:color/background_dark"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/btn_play"
@@ -43,5 +42,15 @@
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="22sp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-8dp"
+        android:indeterminate="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
