--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/group_name"
+        android:id="@+id/text_group_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/group_name"
+        android:layout_below="@id/text_group_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:orientation="horizontal">
@@ -27,7 +27,7 @@
             android:layout_weight="2">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/img_home_team"
+                android:id="@+id/image_home_team"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
@@ -36,10 +36,10 @@
                 app:civ_border_width="5dp" />
 
             <TextView
-                android:id="@+id/home_team_name"
+                android:id="@+id/text_home_team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/img_home_team"
+                android:layout_below="@id/image_home_team"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:text="Russia"
@@ -62,7 +62,7 @@
             android:layout_weight="2">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/img_away_team"
+                android:id="@+id/image_away_team"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
@@ -71,10 +71,10 @@
                 app:civ_border_width="5dp" />
 
             <TextView
-                android:id="@+id/away_team_name"
+                android:id="@+id/text_away_team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/img_away_team"
+                android:layout_below="@id/image_away_team"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:text="Saudi Arabia"
