--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,8 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="2">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/image_home_team"
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/image_flag_home_team"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
@@ -39,7 +40,7 @@
                 android:id="@+id/text_home_team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/image_home_team"
+                android:layout_below="@id/image_flag_home_team"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:text="Russia"
@@ -61,8 +62,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="2">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/image_away_team"
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/image_flag_away_team"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
@@ -74,7 +76,7 @@
                 android:id="@+id/text_away_team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/image_away_team"
+                android:layout_below="@id/image_flag_away_team"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:text="Saudi Arabia"
