--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -11,62 +11,66 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_weight="2"
             android:gravity="center"
             android:orientation="vertical">
 
-
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imvFlagHome"
+                android:id="@+id/image_flag_home_team"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:elevation="10dp"
                 android:src="@drawable/ic_launcher_background"
-                app:civ_border_color="#000000"
+                app:civ_border_color="@color/colorPrimaryDark"
                 app:civ_border_width="5dp" />
 
             <TextView
-                android:id="@+id/tvCountryHome"
+                android:id="@+id/text_home_team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:text="1"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <TextView
+            android:id="@+id/text_match_number"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
+            android:gravity="center"
+            android:text="Match 1" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="2"
             android:gravity="center"
             android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imvFlagAway"
+                android:id="@+id/image_flag_away_team"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:elevation="10dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                app:civ_border_color="#000000"
-                app:civ_border_width="5dp"
-                android:scaleType="centerCrop"/>
+                app:civ_border_color="@color/colorAccent"
+                app:civ_border_width="5dp" />
 
             <TextView
-                android:id="@+id/tvCountryAway"
+                android:id="@+id/text_away_team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:text="2"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvMatch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:text="Match 1" />
 </RelativeLayout>
