--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:text="1"
+                android:text="Home"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -42,8 +42,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:textSize="18sp"
             android:gravity="center"
-            android:text="Match 1" />
+            android:text="Match 0" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -68,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:text="2"
+                android:text="Away"
                 android:textSize="18sp" />
         </LinearLayout>
 
