--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -27,11 +27,11 @@
             android:layout_weight="2">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/image_flag_home_team"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
+                android:elevation="10dp"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_color="@color/colorPrimaryDark"
                 app:civ_border_width="5dp" />
@@ -63,11 +63,11 @@
             android:layout_weight="2">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/image_flag_away_team"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
+                android:elevation="10dp"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_color="@color/colorAccent"
                 app:civ_border_width="5dp" />
