--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -51,6 +51,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-8dp"
         android:indeterminate="true"
+        android:indeterminateDuration="10000"
         android:visibility="gone"/>
 
 </RelativeLayout>
